<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:stretchColumns="0,1">

    <TableRow>

        <TextView
            android:id="@+id/panel_textView_item_type_label"
            style="@style/PanelLabelFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/field_label_item_type" />

        <TextView
            android:id="@+id/panel_spinner_status_label"
            style="@style/PanelLabelFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/field_label_status" />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/panel_textView_item_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            style="@style/LPFieldButton.Inactive"
            android:text="TextView" />

        <Spinner
            android:id="@+id/panel_spinner_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="36dip"
            android:gravity="center_vertical" />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/panel_editText_delay_until_label"
            style="@style/PanelLabelFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/field_label_delay_until" />

        <TextView
            android:id="@+id/panel_editText_deadline_label"
            style="@style/PanelLabelFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/field_label_deadline" />

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/panel_button_delay_until"
            style="@style/LPFieldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/field_label_delay_until"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/panel_button_deadline"
            style="@style/LPFieldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/field_label_deadline"
            android:textAlignment="viewStart" />

    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/panel_textView_milestone_date_label"
            style="@style/PanelLabelFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/field_label_milestone_date" />

        <TextView
            android:id="@+id/panel_textView_is_on_hold_label"
            style="@style/PanelLabelFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/field_label_on_hold" />

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/panel_button_milestone_date"
            style="@style/LPFieldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/field_label_milestone_date"
            android:textAlignment="viewStart" />

        <CheckBox
            android:id="@+id/panel_checkbox_is_on_hold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </TableRow>

    <TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_span="2"
            android:background="@android:color/darker_gray" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/panel_editText_description_label"
            style="@style/PanelLabelFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:gravity="center_vertical"
            android:text="@string/field_label_description"
            android:layout_span="2"
            tools:layout_editor_absoluteY="86dp" />

    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/panel_editText_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_span="2" />

    </TableRow>


</TableLayout>